--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ td{
   padding: 10px;
   font-size: 1.2em;
 }
-td:nth-child(){
-  background-color: blue;
+.bet td:nth-child(1), .bet td:nth-child(2), .bet td:nth-child(3), .bet td:nth-child(4){
+  background-color: green;
 }
 th, td{
   border: 1px solid green;
